--- a/index.html
+++ b/index.html
@@ -1,59 +1,19 @@
-<div id="d3_wrapper">
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+  <div id="d3_wrapper">
     <svg class="chart">
       <g></g>
     </svg>
-</div>
-<style type="text/css">
-  #d3_wrapper div {
-    background-color: blue;
-    height:20px;
-  }
-  .chart {
-  }
+  </div>
+</body>
+</html>
 
-  #d3_wrapper .bar text {
-    fill:white;
-  }
-
-  .chart text {
-    fill: #6f7f87;
-    font: 10px sans-serif;
-    text-anchor: end;
-    font-weight: bold;
-  }
-  .axis text {
-    font: 10px sans-serif;
-    /*transform: rotate(16deg);*/
-  }
-
-  .axis path,
-  .axis line {
-    stroke: #000;
-    shape-rendering: crispEdges;
-  }
-
-  .show_months:hover {
-    cursor: pointer;
-  }
-
-  .month_bar {
-    fill: #f29f90;
-    stroke: #e55034;
-  }
-  .month_bar:hover {
-    cursor: pointer;
-    fill:#854438;
-  }
-
-  .day_bar {
-    fill: #14a7e1;
-    stroke:#022330;
-  }
-  .day_bar:hover {
-    fill: #13495d;
-  }
-</style>
-<script src="https://d3js.org/d3.v4.min.js"></script>
 <script type="text/javascript">
   var margin = { top:0 , right:0 , bottom:20 , left:30 }
   var svg_width = 1000, svg_height = 300;
